--- a/components/style.css
+++ b/components/style.css
@@ -1,3 +1,13 @@
+html body {
+    margin: 0;
+}
+
+a {
+    text-decoration: none !important;
+}
+
+/* header */
+
 .navbar {
     background-color: #9AA4F9 !important;
     height: 30px;
@@ -10,4 +20,105 @@
 
 .navbar-menu {
     background-color: #9AA4F9 !important;
+}
+
+.page-title {
+    padding: 20px;
+}
+
+.page-title h1 {
+    color: #9AA4F9 !important;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+/* login */
+
+.login {
+    width: 70% !important;
+    margin: auto;
+}
+
+.label {
+    padding: 0 10px !important;
+    color: #9AA4F9 !important;
+}
+
+.field {
+    margin: 40px 0;
+}
+
+.input {
+    background-color: #9AA4F9 !important;
+    border: none !important;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
+}
+
+.control {
+    text-align: center !important;
+}
+
+.button {
+    background-color: white !important;
+    border: #9AA4F9 2px solid !important;
+    color: #9AA4F9 !important;
+    font-weight: bold;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
+}
+
+/* items */
+
+.items {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: auto 20px;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 350px;
+    margin: 20px;
+    border-radius: 30px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
+}
+
+.item-img {
+    width: 200px;
+    height: 200px;
+}
+
+.item-img img {
+    width: 100%;
+    height: 100%;
+}
+
+.item-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.item-name {
+    width: 100%;
+    margin: 10px auto;
+    color: #9AA4F9 !important;
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.item-stock {
+    width: 100%;
+    text-align: left;
+    color: gray !important;
+    position: relative;
+    right: 30px;
 }
