--- a/components/style.css
+++ b/components/style.css
@@ -190,12 +190,12 @@ a {
     background-color: white !important;
     border: #9AA4F9 2px solid !important;
     color: #9AA4F9 !important;
-    font-weight: bold;
+    font-weight: bold !important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
     margin: 0 20px;
     border-radius: 100%;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
