--- a/components/style.css
+++ b/components/style.css
@@ -71,6 +71,7 @@ a {
 .input {
     background-color: #9AA4F9 !important;
     border: none !important;
+    height: 40px !important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
 }
 
